2013-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.ui:
	* X3DBrowserEditor.h:
	* BrowserSelection.cpp:
	* X3DBrowserEditor.cpp:
	* OutlineRouteGraph.h:
	* OutlineRouteGraph.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2013-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* LibraryView.h:
	* X3DBrowserEditor.h:
	* BrowserSelection.h:
	* ViewpointList.h:
	* OutlineEditor.h:
	* HistoryEditor.h:
	* MaterialEditor.h:
	* OutlineTreeModel.h:
	* X3DOutlineTreeView.h:
	* MotionBlurEditor.h:
	* OutlineTreeViewEditor.h:
	* NodePropertiesEditor.h:
	* TextViewEditable.h:
	* OutlineCellRenderer.h: 

2013-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* MagicImport.h:
	* MagicImport.cpp:
	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* BrowserSelection.h:
	* X3DBrowserEditor.cpp:
	* BrowserSelection.cpp: 

2013-12-01  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.h:
	* MagicImport.cpp:
	* X3DBrowserEditor.cpp: 

2013-12-01  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.h:
	* MagicImport.cpp:
	* X3DBrowserEditor.cpp: 

2013-12-01  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.cpp:
	* X3DBrowserWidget.cpp:
	* X3DBrowserEditor.cpp: 

2013-12-01  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.cpp:
	* lena.jpg:
	* Lena.jpg:
	* NoTexture.x3dv: 

2013-12-01  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.h:
	* MagicImport.cpp:
	* BrowserWindow.h:
	* BrowserWindow.ui:
	* BrowserWindow.cpp:
	* X3DBrowserWidget.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp:
	* ComposedCubeMapTexture.x3dv: 

2013-12-01  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.ui:
	* BrowserWindow.cpp:
	* MaterialEditor.ui:
	* MaterialEditor.h:
	* MaterialEditor.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DMaterialEditorInterface.h:
	* X3DBrowserWindowInterface.cpp: