@@ -1272,6 +1272,15 @@
                         <signal name="toggled" handler="on_select_lowest_toggled" swapped="no"/>
                       </object>
                     </child>
+                    <child>
+                      <object class="GtkCheckMenuItem" id="FollowPrimarySelectionMenuItem">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Follow Primary Selection</property>
+                        <property name="use_underline">True</property>
+                        <signal name="toggled" handler="on_follow_primary_selection_toggled" swapped="no"/>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
