@@ -1,3 +1,13 @@
+2013-12-03  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* BrowserWindow.h:
+	* BrowserWindow.cpp:
+	* BrowserWindow.ui:
+	* X3DBrowserEditor.cpp:
+	* BrowserSelection.cpp:
+	* X3DBrowserWindowInterface.h:
+	* X3DBrowserWindowInterface.cpp: 
+
 2013-12-02  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* BrowserWindow.h:
